--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ python-dotenv>=1.0.1
 reportlab==4.1.0
 requests>=2.32.0
 beautifulsoup4>=4.12.0
-openai==1.12.0
-gunicorn==21.2.0
+openai==1.55.3
+httpx==0.27.2
+gunicorn>=22.0.0,<24.0.0
